jenkins/jenkins-deployment.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: jenkins
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: jnlp
      protocol: TCP
      port: 50000
      targetPort: 50000
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkinsci/blueocean:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        - containerPort: 50000
